--- a/data/languages/ru/test-rules.yaml
+++ b/data/languages/ru/test-rules.yaml
@@ -2,15 +2,13 @@ rules:
   - template:
       _speaker: 0
     output:
-      cls: pp
-      val: я
+      val: pp.я
       links: _speaker.0
 
   - template:
       song: 0
     output:
-      cls: n
-      val: песня
+      val: n.песня
       links: song.0
 
   - template:
@@ -19,12 +17,10 @@ rules:
       siblings: [0, 1]
     output:
       _NG:
-      - сls: pp
-        val: мой
+      - val: pp.мой
         links: _speaker.1
         pull: gender.next
-      - cls: n
-        val: сестра
+      - val: n.сестра
         links:
         - female.0
         - siblings.0
@@ -35,16 +31,13 @@ rules:
       listen-to: [0, 1]
     output:
       sentence:
-      - cls: NG
-        val: 0
+      - val: NG.0
         set: case.nom
         links: listen-to.0
-      - cls: v
-        val: слушать
+      - val: v.слушать
         pull: person.prev
         links: listen-to
-      - cls: NG
-        val: 1
+      - val: NG.1
         set: case.acc
         links: listen-to.1
 
@@ -53,13 +46,8 @@ rules:
       author-of: [0, 1]
     output:
       NG:
-      - cls: NG
-        val: 1
+      - val: NG.1
         links: author-of.1
-      - cls: NG
-        val: 0
+      - val: NG.0
         set: case.gen
         links: author-of.0
-
-
-
